# steam-cs2-highlight-extractor

./: .gitignore  CHANGELOG.md  PRODUCT.md  README.md  build_tauri.bat  gui.py  server.py  server.spec  steam_highlight_extractor.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/lib/: api.js
